--- a/index.html
+++ b/index.html
@@ -1,81 +1,26 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
   <meta name="author" content="Gabriel Vinicius, 200027531 ">
   <meta name="author" content="Matias de Jesus Silva Brito, 200025952 ">
   <meta name="author" content="Bernardo Braga e CIcero, 200027342">
-  <meta name="keywords" content="web, CSS">
-  <meta name="description" content="Atividades sobre CSS">
-  <title>CSS - Atividade 3</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-    }
-
-
-    .form-container {
-      width: 300px;
-      margin: 50px auto;
-      background-color: #ffffff;
-      padding: 20px;
-      border-radius: 5px;
-      box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
-    }
-
-
-    input[type="text"],
-    select,
-    textarea {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 10px;
-      border: 1px solid #ccc;
-      border-radius: 3px;
-    }
-
-
-    input[type="submit"] {
-      background-color: #007bff;
-      color: #fff;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 3px;
-      cursor: pointer;
-    }
-
-
-    input[type="submit"]:hover {
-      background-color: #0056b3;
-    }
-  </style>
+  <title>Atividade Lista</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <div class="form-container">
-    <h2>Formulário</h2>
-    <form>
-      <label for="nome">Nome Completo:</label>
-      <input type="text" id="nome" name="nome" placeholder="Digite seu nome completo">
 
-      <label for="curso">Curso:</label>
-      <select id="curso" name="curso">
-        <option value="web">Web</option>
-        <option value="software">Eng. Software</option>
-        <option value="outro">Outro</option>
-      </select>
+  <p> <em>Eu creio que um dos princípios essenciais da sabedoria é o de se abster das ameaças verbais ou
+      insultos</em></p>
 
-      <label for="comentario">Comentário:</label>
-      <textarea id="comentario" name="comentario" rows="4" placeholder="Digite seu comentário"></textarea>
+  <h1>Creio que tenho prova suficiente de que falo a verdade: a pobreza.</h1>
+  <h2>Por mim, creio que estamos mortos há muito tempo: morremos no exato momento em que deixamos de ser úteis.</h2>
+  <h3>Acho que não sei quem sou, só sei do que não gosto.</h3>
+  <h4>Parece-me fácil viver sem ódio, coisa que nunca senti, mas viver sem amor acho impossível.</h4>
 
-      <input type="submit" value="Enviar">
-    </form>
-  </div>
 </body>
 
 </html>
